fixed the spacing issue for Matt Miller

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -412,3 +412,9 @@ a.ogp-card__link--unset:hover {
 .usa-search [type="submit"] {
     background-image: none;
 }
+
+@media screen and (max-width:800px){
+.mobile-align{
+    margin-left:50px
+}
+}
